@@ -1,1 +1,1 @@
-DIST gnome-user-share-3.10.2.tar.xz 383320 SHA256 1d1ea57a49224c36e7cba04f80265e835639377f474a7582c9e8ac946eda0f8f SHA512 792a7444475d6f02c53a9661192dc5550b2c7ca29975d5c9d33d9ef481440d9e4bca5f7f70861df4503e8331044a1db10fe6501cdaccc8f9d314c239c308078e WHIRLPOOL cf3c605ce1801797d5e915e266f7fa73aeb35b10efa07ca2b1a5b69cbb185910956b9342f7dc83ef4e5e3deb1ae0db3586b5e83566c48d4c1951fd6530a3abd1
+DIST gnome-user-share-3.14.2.tar.xz 391916 SHA256 6b05b3ef31af3bb39c903f94a0d163c0a9c4aa5266ae98e2281e0613f2972ee9 SHA512 d42587c0c64fda9d051f3d6c792358d02c32b95193df512016a04a0ee4861483f3060f1579de6fa229676795e420cf88732da334757471b79410d3be6ebe8bd1 WHIRLPOOL 14a191b8cbfa218e4dcde379212a00f0753d02726b55b16b9f67fbc2c5484038d9d18ababb5c2019624856041257a88cea6b00a3d4cf21a83c9369b9486452be
