@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-user-share/gnome-user-share-3.10.2.ebuild,v 1.5 2014/05/27 06:51:19 pacho Exp $
+# $Header: $
 
 EAPI="5"
 GCONF_DEBUG="no"
@@ -28,7 +28,7 @@ RDEPEND="
 	>=x11-libs/libnotify-0.7:=
 	bluetooth? (
 		>=net-wireless/gnome-bluetooth-3.9.3:2=
-		>=net-wireless/bluez-5 )
+		>=net-wireless/bluez-5[obex] )
 "
 DEPEND="${RDEPEND}
 	!<gnome-base/gnome-control-center-3.9
@@ -41,7 +41,7 @@ DEPEND="${RDEPEND}
 
 src_prepare() {
 	epatch_user
-	gnome2_src_configure
+	gnome2_src_prepare
 }
 
 src_configure() {
