@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/gnome-user-share
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-user-share/ChangeLog,v 1.37 2014/05/27 06:51:19 pacho Exp $
+
+*gnome-user-share-3.14.2 (09 Feb 2015)
+
+  09 Feb 2015; Poncho <poncho@spahan.ch> +gnome-user-share-3.14.2.ebuild,
+  -gnome-user-share-3.10.2.ebuild:
+  gnome-extra/gnome-user-share: version bump
 
   23 Jul 2014; Poncho <poncho@spahan.ch> gnome-user-share-3.10.2.ebuild:
   gnome-extra/gnome-user-share: add epatch_user
